--- a/21_Goods_DB/21_Goods_DB.csproj
+++ b/21_Goods_DB/21_Goods_DB.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.8.0" />
   </ItemGroup>
 
 </Project>
